fix:css remove double border on publish cards

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -247,6 +247,10 @@
   padding-bottom: 0;
   margin-bottom: var(--spacing-large);
   border-top: 1px solid var(--color-border);
+
+  &:only-child {
+    border-top: none;
+  }
 }
 
 .card__body-actions {
